# pioneers

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  Makefile.in.orig  Makefile.in.rej  NEWS  README  README.Cygwin  README.MinGW  README.subversion  TODO  acinclude.m4  aclocal.m4  autogen.sh  bash_completion  config.h.in  configure  configure.ac  pioneers.nsi.in  pioneers.spec.in  pioneers_add_special_building_phase_20110629.patch  pioneers_fix_special_building_phase_and_add_resource_pics_20110706.patch
MinGW/.svn/: all-wcprops  entries
MinGW/.svn/text-base/: Makefile.am.svn-base  gdk-pixbuf.loaders.svn-base
admin-scripts/: getVersions.sh  kill-game.sh  list.sh  locallobby.sh  locallobbybot.sh  remotelobbybot.sh  screenrc
admin-scripts/.svn/: all-wcprops  entries
admin-scripts/.svn/text-base/: README.svn-base  meta.sh.svn-base  remotelobby.sh.svn-base
client/: callback.h  callback.h.orig  callback.h.rej
client/.svn/: all-wcprops  entries
client/.svn/text-base/: Makefile.am.svn-base
client/ai/: ai.c  ai.h  greedy.c  greedy.c.orig  greedy.c.rej  lobbybot.c
client/ai/.svn/: all-wcprops  entries
client/common/: build.c  callback.c  callback.c.orig  client.c  client.c.orig  client.h  client.h.orig  develop.c  main.c  resource.c  setup.c  turn.c
client/common/.svn/: all-wcprops  entries
client/gtk/: audio.c  audio.h  avahi.c  callbacks.c  callbacks.c.orig  chat.c  connect.c  discard.c  frontend.h  frontend.h.orig  gameover.c  gold.c  gui.c  gui.c.orig  gui.c.rej  histogram.c  histogram.h  interface.c  legend.c  offline.c  plenty.c  resource-table.c  resource-table.h  settingscreen.c  shapes.dia  state.c  trade.c
client/gtk/.svn/: all-wcprops  dir-prop-base  entries
client/gtk/data/: Makefile.am  pioneers.rc
client/gtk/data/.svn/: all-wcprops  dir-prop-base  entries
client/gtk/data/themes/.svn/: all-wcprops  entries
client/gtk/data/themes/.svn/text-base/: Makefile.am.svn-base
client/gtk/data/themes/Classic/: Makefile.am
client/gtk/data/themes/Classic/.svn/: all-wcprops  entries
client/gtk/data/themes/FreeCIV-like/.svn/: all-wcprops  entries
client/gtk/data/themes/FreeCIV-like/.svn/text-base/: Makefile.am.svn-base
client/gtk/data/themes/Iceland/: Makefile.am
client/gtk/data/themes/Iceland/.svn/: all-wcprops  entries
client/gtk/data/themes/Tiny/: Makefile.am
client/gtk/data/themes/Tiny/.svn/: all-wcprops  entries
client/gtk/data/themes/Wesnoth-like/.svn/: all-wcprops  entries
client/gtk/data/themes/Wesnoth-like/.svn/text-base/: Makefile.am.svn-base
client/gtk/data/themes/ccFlickr/: Makefile.am
client/gtk/data/themes/ccFlickr/.svn/: all-wcprops  entries
client/help/.svn/: all-wcprops  entries
client/help/C/: Makefile.in  custom.xsl  legal.xml
common/: Makefile.am  buildrec.h  cards.h  common_glib.c  cost.h  game.c  game.c.orig  game.c.rej  game.h  game.h.orig  map.c  map.h  map_query.c  notifying-string-private.h  notifying-string.c  notifying-string.h  quoteinfo.c
common/.svn/: all-wcprops  dir-prop-base  entries
common/.svn/text-base/: buildrec.c.svn-base  cards.c.svn-base  common_glib.h.svn-base  cost.c.svn-base  driver.c.svn-base  driver.h.svn-base  log.c.svn-base  log.h.svn-base  network.c.svn-base  network.h.svn-base  notifying-string.gob.svn-base  quoteinfo.h.svn-base  state.c.svn-base  state.h.svn-base
common/gtk/: aboutbox.c  colors.h  common_gtk.h  game-settings.c  game-settings.h  metaserver.h  player-icon.c  player-icon.h  polygon.c  select-game.c  theme.c
common/gtk/.svn/: all-wcprops  entries
common/gtk/.svn/text-base/: Makefile.am.svn-base  aboutbox.c.svn-base  aboutbox.h.svn-base  colors.c.svn-base  common_gtk.c.svn-base  config-gnome.c.svn-base  config-gnome.h.svn-base  game-rules.c.svn-base  game-rules.h.svn-base  game-settings.c.svn-base  game-settings.h.svn-base  gtkbugs.c.svn-base  gtkbugs.h.svn-base  gtkcompat.h.svn-base  guimap.c.svn-base  guimap.h.svn-base  metaserver.c.svn-base  player-icon.c.svn-base  polygon.h.svn-base  select-game.h.svn-base  theme.h.svn-base
debian/: changelog  pioneers-console-data.install  pioneers-console.manpages  pioneers-data.install  pioneers-meta-server.config  pioneers-meta-server.postinst  pioneers.manpages  release-checklist  rules
debian/.svn/: all-wcprops  dir-prop-base  entries
debian/.svn/text-base/: control.svn-base  copyright.svn-base  pioneers-console.install.svn-base  pioneers-console.preinst.svn-base  pioneers-meta-server.init.svn-base  pioneers-meta-server.install.svn-base  pioneers-meta-server.manpages.svn-base  pioneers-meta-server.postrm.svn-base  pioneers-meta-server.templates.svn-base  pioneers.install.svn-base  pioneers.menu.svn-base  watch.svn-base
debian/po/: cs.po  es.po  it.po  ja.po  nl.po  ru.po  sv.po  templates.pot
debian/po/.svn/: all-wcprops  dir-prop-base  entries
debian/source/.svn/: all-wcprops  entries
docs/: README.game  README.release  pioneers-server-console.6  server_states.fig
docs/.svn/: all-wcprops  entries
docs/.svn/text-base/: Makefile.am.svn-base  README.states.svn-base  client_states.fig.svn-base  pioneers-editor.6.svn-base  pioneers-meta-server.6.svn-base  pioneers-server-gtk.6.svn-base  pioneers.6.svn-base  pioneersai.6.svn-base  server_states_trade.dot.svn-base
editor/: Makefile.am
editor/.svn/: all-wcprops  entries
editor/gtk/: editor.c  game-buildings.c  game-resources.h
editor/gtk/.svn/: all-wcprops  dir-prop-base  entries
macros/: gnome-autogen.sh
macros/.svn/: all-wcprops  entries
macros/.svn/text-base/: Makefile.am.svn-base  (+1 more)
meta-server/: Makefile.am  main.c  meta-report
meta-server/.svn/: all-wcprops  entries
po/: check-spelling.sh  de.po  en_GB.po  es.po  gl.po  it.po  ja.po  nl.po  pt.po  sv.po
po/.svn/: all-wcprops  dir-prop-base  entries
server/: admin.c  admin.h  avahi.h  buildutil.c  discard.c  glib-driver.h  main.c  player.c  pregame.c  resource.c  robber.c  server.c  server.h  special_building_phase.c  special_building_phase.h  trade.c  turn.c
server/.svn/: all-wcprops  entries
server/gtk/: main.c  main.c.orig  pioneers-server.desktop.in
(+98 files in other folders)
