# Pioneers - Implementation of the excellent Settlers of Catan board game.
#   Go buy a copy.
#
# Copyright (C) 2003, 2006 Bas Wijnen <shevek@fmf.nl>
# 
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA

classicthemedir = $(pioneers_themedir)/Classic

classictheme_DATA = \
	client/gtk/data/themes/Classic/board.png \
	client/gtk/data/themes/Classic/desert.png \
	client/gtk/data/themes/Classic/field.png \
	client/gtk/data/themes/Classic/forest.png \
	client/gtk/data/themes/Classic/gold.png \
	client/gtk/data/themes/Classic/hill.png \
	client/gtk/data/themes/Classic/mountain.png \
	client/gtk/data/themes/Classic/pasture.png \
	client/gtk/data/themes/Classic/sea.png \
	client/gtk/data/themes/Classic/theme.cfg

EXTRA_DIST += $(classictheme_DATA)
