# Pioneers - Implementation of the excellent Settlers of Catan board game.
#   Go buy a copy.
#
# Copyright (C) 2003, 2006 Bas Wijnen <shevek@fmf.nl>
# 
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA

tinythemedir = $(pioneers_themedir)/Tiny

tinytheme_DATA = \
	client/gtk/data/themes/Tiny/board.png \
	client/gtk/data/themes/Tiny/brick-lorindol.png \
	client/gtk/data/themes/Tiny/brick-port.png \
	client/gtk/data/themes/Tiny/desert-lorindol.png \
	client/gtk/data/themes/Tiny/gold-lorindol.png \
	client/gtk/data/themes/Tiny/grain-lorindol.png \
	client/gtk/data/themes/Tiny/grain-port.png \
	client/gtk/data/themes/Tiny/lumber-lorindol.png \
	client/gtk/data/themes/Tiny/lumber-port.png \
	client/gtk/data/themes/Tiny/ore-lorindol.png \
	client/gtk/data/themes/Tiny/ore-port.png \
	client/gtk/data/themes/Tiny/sea-lorindol.png \
	client/gtk/data/themes/Tiny/theme.cfg \
	client/gtk/data/themes/Tiny/wool-lorindol.png \
	client/gtk/data/themes/Tiny/wool-port.png

EXTRA_DIST += $(tinytheme_DATA)
