# Pioneers - Implementation of the excellent Settlers of Catan board game.
#   Go buy a copy.
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA

ccflickrthemedir = $(pioneers_themedir)/ccFlickr

ccflickrtheme_DATA = \
	client/gtk/data/themes/ccFlickr/ATTRIB \
	client/gtk/data/themes/ccFlickr/board.png \
	client/gtk/data/themes/ccFlickr/brick.png \
	client/gtk/data/themes/ccFlickr/desert.png \
	client/gtk/data/themes/ccFlickr/gold.png \
	client/gtk/data/themes/ccFlickr/grain.png \
	client/gtk/data/themes/ccFlickr/lumber.png \
	client/gtk/data/themes/ccFlickr/ore.png \
	client/gtk/data/themes/ccFlickr/port-brick.png \
	client/gtk/data/themes/ccFlickr/port-gold.png \
	client/gtk/data/themes/ccFlickr/port-grain.png \
	client/gtk/data/themes/ccFlickr/port-lumber.png \
	client/gtk/data/themes/ccFlickr/port-ore.png \
	client/gtk/data/themes/ccFlickr/port-wool.png \
	client/gtk/data/themes/ccFlickr/sea.png \
	client/gtk/data/themes/ccFlickr/theme.cfg \
	client/gtk/data/themes/ccFlickr/wool.png

EXTRA_DIST += $(ccflickrtheme_DATA)
